--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cbor-x": "^1.5.3",
     "deno-bin": "^1.36.1"
   },
   "devDependencies": {
