Transferring a compiled app file from Node to Deno to Worker
Here we found out that the `vm` module from Node is available on Deno,
but its methods haven't been implemented.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,11 +12,13 @@
 				"project": "./tsconfig.json"
 			},
 			"rules": {
-				"@typescript-eslint/semi": ["error", "always"],
 				"semi": ["error", "always"],
 				"indent": ["error", "tab"],
-				"@typescript-eslint/indent": ["error", "tab"],
 				"no-tabs": "off",
+				"space-before-function-paren": "off",
+				"@typescript-eslint/space-before-function-paren": "off",
+				"@typescript-eslint/semi": ["error", "always"],
+				"@typescript-eslint/indent": ["error", "tab"],
 				"@typescript-eslint/comma-dangle": "off"
 			}
 		}
