--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@rocket.chat/apps-engine": "^1.40.0",
+    "@rocket.chat/ui-kit": "^0.31.23",
     "cbor-x": "^1.5.3",
-    "deno-bin": "^1.36.1"
+    "deno-bin": "^1.36.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.18.54",
