Updated import map and demonstration import work on subprocess
The main problem here seems to be that import maps seem to affect
Deno's workers differently than how it affects the original process.

Could be a bug on their side 👀

--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
   "imports": {
-    "@rocket.chat/apps-engine/": "./node_modules/@rocket.chat/apps-engine/src/"
+    "@rocket.chat/apps-engine/": "npm:/@rocket.chat/apps-engine/"
   }
 }
